# highperfasr

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  gke-l4.yaml  pyproject.toml
.github/workflows/: benchmark-validation.yml  docker-publish.yml
benchmarks/: README.md  report-schema.json
benchmarks/baselines/: registry.json
benchmarks/config/: quality-gates.json
benchmarks/datasets/: __init__.py  download.py  loader.py  registry.py
benchmarks/datasets/tests/: test_loader.py  test_registry.py
benchmarks/docs/: datasets.md  metrics.md  publishing.md  tuning.md
benchmarks/results/2026-l4-batch-by-duration/: raw.json  result.json  summary.md
benchmarks/results/2026-l4-dockerfile-stream/: soak.json  summary.md  sweep.json
benchmarks/results/2026-l4-nemo-512-streams/: concurrency-sweep.json  result.json  summary.md
benchmarks/results/2026-l4-nemo-batch/: concurrency-sweep.json  result.json  summary.md
benchmarks/scripts/: bench_batch.py  bench_batch_by_duration.py  bench_combined.py  bench_stream.py  bench_stream_longlive.py  bench_stream_soak.py  check_regression.py  eval_wer_detailed.py  gates.py  preflight.py  profile_gpu.py  run_benchmark.py  stats.py  tune_gpu.py  validate_report.py  wer_utils.py
configs/: serving-batch.yaml  serving.yaml
deploy/docker/: Dockerfile
docs/: index.html
docs/runs/: 2026-l4-batch-by-duration.html  2026-l4-dockerfile-stream.html  2026-l4-nemo-512-streams.html  2026-l4-nemo-batch.html  2026-l4-streaming-comparison.html  2026-t4-nemo-batch.html  2026-t4-nemo-stream.html  l4-batch-20260724T110404.html  l4-batch-20260724T122749.html  l4-stream-20260724T123159.html
docs/scripts/: gen-run-pages.py
examples/: README.md
examples/js/: stream_client.mjs
examples/python/: batch_client.py  stream_client.py
examples/web/: benchmark-dashboard.html
labs/nemo-fastapi/: pyproject.toml
labs/nemo-fastapi/configs/: serving-stream.yaml
labs/nemo-fastapi/src/highperfasr/: batch_engine.py  cli.py  compat.py  config.py  gpu_worker.py  server.py  stream_engine.py
recipes/: README.md
recipes/aws-g6-l4/: README.md  gpu-scheduling.yaml  storage-class.yaml
recipes/azure-a10/: README.md  gpu-scheduling.yaml  storage-class.yaml
recipes/base/: deployment-batch.yaml  deployment-stream.yaml  kustomization.yaml  pvc.yaml  service.yaml
recipes/gcp-l4/: README.md  gpu-scheduling.yaml  hpa.yaml  kustomization.yaml  storage-class.yaml
recipes/gcp-t4/: README.md  config-override.yaml  configmap.yaml  gpu-scheduling.yaml  kustomization.yaml  serving-batch-t4.yaml  serving-stream-t4.yaml
spec/: asyncapi.yaml  openapi.yaml  protocol.md
src/highperfasr/: __init__.py  compat.py  stream_engine.py
(+16 files in other folders)
