# Root pyproject.toml — repo tooling and benchmark utilities.
# This is NOT a Python SDK. The highperfasr protocol is language-neutral.
# Implementation-specific packages live in labs/.

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "highperfasr-tools"
version = "0.1.0"
description = "Benchmark and conformance tools for the HighPerfASR protocol"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
bench = [
    "jiwer>=3.0",
    "whisper-normalizer>=0.1.0",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "soundfile",
    "httpx>=0.27",
]

[tool.black]
line-length = 119
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 119

[tool.ruff]
line-length = 119
