[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "highperfasr-nemo"
version = "0.1.0"
description = "NeMo implementation of the HighPerfASR protocol"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Beastoin" }]
keywords = ["asr", "speech-recognition", "nemo", "gpu", "inference", "serving"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "uvloop>=0.19; sys_platform != 'win32'",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "python-multipart>=0.0.9",
    "packaging>=24.0",
]

[project.optional-dependencies]
nemo = [
    "nemo-toolkit[asr]>=2.5,<2.7",
    "torch>=2.6",
]
bench = [
    "jiwer>=3.0",
    "whisper-normalizer>=0.1.0",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "soundfile",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "black>=24.0",
    "isort>=5.13",
]

[project.scripts]
highperfasr = "highperfasr.cli:main"

[project.urls]
Homepage = "https://highperfasr.com"
Repository = "https://github.com/beastoin/highperfasr"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
highperfasr = ["py.typed"]

[tool.black]
line-length = 119
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 119

[tool.ruff]
line-length = 119
